--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, sans-serif;
     margin: 0;
+    
 }
 
 .container-1 {
@@ -56,4 +57,63 @@ ul {
     padding: 60px;
     text-align: center;
     
+}
+
+.hero button{
+    background-color: #3882f6;
+    color: white;
+    font-size: 18px;
+    padding: 10px 30px;
+    border-radius: 10px;
+    border-style: none;
+}
+
+.info {
+    text-align: center;
+    margin: 50px;
+    font-size: 36px;
+    font-weight: 900;
+}
+
+.container-2 {
+   display: flex;
+   justify-content: center;
+   gap: 30px;
+   padding: 0px 300px 100px;
+}
+
+.images {
+    border-radius: 15px;
+    border-color: #3882f6;
+    border-style: solid;
+    border-width: 5px;
+    width: 250px;
+    height: 250px;
+    background-color: white;
+    margin-bottom: 10px;
+}
+
+.text {
+    max-width: 250px;
+    text-align: center;
+}
+
+.container-3 {
+    background-color: #e5e7eb;
+    padding: 100px 300px;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 300;
+    text-align: center;
+    font-style: italic;
+}
+
+.author {
+    font-size: 30px;
+    color: #1f2937;
+    font-weight: bold;
+    text-align: end;
 }
