--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,21 @@ body {
 
 .container-1 {
     background-color: #1F2937;
+    background-image: url("img/mir4-banner.png");
+    background-size: cover;
     color: white;
     padding: 0 300px;
 }
+
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     
+}
+
+.header-logo {
+    font-weight: bold;
 }
 
 .links {
@@ -27,10 +34,10 @@ ul {
 
 .hero-container {
     display: flex;
-    padding: 100px 0;
+    padding: 50px 0;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    
     
 }
 
@@ -41,26 +48,22 @@ ul {
     
 }
 
-.hero {
-    flex: 1;
-}
 
-.image {
-    flex: 1;
-}
 .secondary-text {
     font-size: 18px;
     color: #f9faf8;
 }
 .img {
-    background-color: gray;
-    padding: 60px;
-    text-align: center;
     
+    width: 600px;
+    height: 400px;
+    
+    background-image: url(img/mir4-logo-nobg.png);
+    background-size: auto;
 }
 
 .hero button{
-    background-color: #3882f6;
+    background-color: #D70000;
     color: white;
     font-size: 18px;
     padding: 10px 30px;
@@ -116,4 +119,42 @@ ul {
     color: #1f2937;
     font-weight: bold;
     text-align: end;
+}
+
+
+
+.cta {
+    display: flex;
+    justify-content: space-between;
+    background-color: #3882f6;
+    border-radius: 20px;
+    margin: 100px 300px;
+    padding: 100px 200px;
+    color: white;
+}
+
+.action {
+    font-size: 25px;
+    font-weight: 900;
+    
+}
+
+.cta button {
+    color: white;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 10px 30px;
+    border-color: white;
+    font-size: 20px;
+    font-weight: 700;
+    background-color: #3882f6;
+}
+
+.footer {
+    text-align: center;
+    font-family: Roboto, sans-serif;
+    background-color: #1f2937;
+    color: white;
+    font-weight: 700;
+    padding: 50px 0;
 }
