Fix the Register now button
Made the Register Now text bold

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ ul {
     background-color: #D70000;
     color: white;
     font-size: 18px;
+    font-weight: 700;
     padding: 10px 30px;
     border-radius: 10px;
     border-style: none;
